--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,8 +2,6 @@
 
 @tailwind components;
 
-@tailwind utilities;
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,3 +15,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.new-trade__input {
+  @apply h-8 bg-custom-dark-sea-green border-b-2 border-custom-lighter-purple;
+}
+
+.new-trade__input:focus {
+  @apply border-custom-dark-purple;
+}
+
+@tailwind utilities;
